// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitInquiryRequestMutation when only message is present calls gravity loader with only message 1`] = `
{
  "inquiryRequest": {
    "inquireable": {
      "__typename": "Artwork",
      "artists": [
        {
          "birthday": "1929",
          "name": "Bob Ross",
        },
      ],
      "title": "Happy little accident",
    },
    "inquirer": {
      "email": "rob@ross.com",
      "name": "Rob Ross",
    },
    "questions": null,
    "shippingLocation": null,
  },
}
`;

exports[`SubmitInquiryRequestMutation when question is present calls gravity loader with questions and address 1`] = `
{
  "inquiryRequest": {
    "inquireable": {
      "__typename": "Artwork",
      "artists": [
        {
          "birthday": "1929",
          "name": "Bob Ross",
        },
      ],
      "title": "Happy little accident",
    },
    "inquirer": {
      "email": "rob@ross.com",
      "name": "Rob Ross",
    },
    "questions": [
      "price_and_availability",
      "shipping_quote",
    ],
    "shippingLocation": {
      "address": "112 Main st Brooklyn NY 11211",
      "city": null,
      "country": null,
    },
  },
}
`;
